# gh-activity

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  gh-diary  test.c
.github/workflows/: release.yml  test.yml
.serena/: project.yml
.serena/memories/: onboarding-gh-activity.md
script/: build.sh
src/: builder.rs  main.rs  runner.rs
src/builder/: option_builder.rs
src/builder/option_builder/: author.rs  date.rs  limit.rs  output.rs  repo.rs
