[package]
name = "gh-diary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.6.2", features = ["date"] }
chrono = { version = "0.4.26" }
tokio = { version = "1.29.1", features = ["macros", "process", "rt-multi-thread"] }
