[package]
name = "gh-activity"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.2.0" }
inquire = { version = "0.6.2", features = ["date"] }
chrono = { version = "0.4.26" }
tokio = { version = "1.29.1", features = [
  "macros",
  "process",
  "rt-multi-thread",
] }

[dev-dependencies]
tempfile = "3"
